Fix z-index for home filters

--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -21,7 +21,7 @@
     position: absolute;
     top: 125px;
     left: 16px;
-    z-index: 1000;
+    z-index: 900;
     width: 260px;
     background: rgba(0, 0, 0, 0.78);
     color: #fff;
